--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -954,10 +954,10 @@ msgstr "Aloita ilmoittautumalla jollekin kurssille."
 msgid "SKIP_COURSE_NAVIGATION"
 msgstr "Ohita kurssivalikko"
 
-#: course/templates/course/_course_menu.html news/models.py
-#: news/templates/news/list.html userprofile/templates/userprofile/profile.html
-msgid "LANGUAGE"
-msgstr "Kieli"
+#: course/templates/course/_course_menu.html
+#: edit_course/templates/edit_course/edit_course_base.html
+msgid "COURSE"
+msgstr "Kurssi"
 
 #: course/templates/course/_course_menu.html
 msgid "CHANGE_LANGUAGE"
@@ -966,11 +966,6 @@ msgstr "Vaihda kieli"
 #: course/templates/course/_course_menu.html
 msgid "MINIMISE_SIDEBAR"
 msgstr "Pienennä sivupalkki"
-
-#: course/templates/course/_course_menu.html
-#: edit_course/templates/edit_course/edit_course_base.html
-msgid "COURSE"
-msgstr "Kurssi"
 
 #: course/templates/course/_course_menu.html
 #: course/templates/course/_siblings.html exercise/templates/exercise/toc.html
@@ -1816,6 +1811,13 @@ msgid "MODEL_NAME_MAX_SUBMISSIONS_RULE_DEVIATION_PLURAL"
 msgstr "enimmäispalautuskertojen poikkeamat"
 
 #: deviations/templates/deviations/_remove_modal.html
+#: deviations/templates/deviations/list_dl.html
+#: deviations/templates/deviations/list_submissions.html
+msgid "REMOVE_SELECTED_DEVIATIONS"
+msgstr "Poista valitut poikkeamat"
+
+#: deviations/templates/deviations/_remove_modal.html
+#: edit_course/templates/edit_course/edit_content.html
 #: exercise/templates/exercise/_duplicate_submission_modal.html
 #: exercise/templates/exercise/staff/_assessment_panel.html
 #: exercise/templates/exercise/staff/_late_submission_approval_modal.html
@@ -1825,12 +1827,6 @@ msgstr "enimmäispalautuskertojen poikkeamat"
 #: templates/base.html
 msgid "CLOSE"
 msgstr "Sulje"
-
-#: deviations/templates/deviations/_remove_modal.html
-#: deviations/templates/deviations/list_dl.html
-#: deviations/templates/deviations/list_submissions.html
-msgid "REMOVE_SELECTED_DEVIATIONS"
-msgstr "Poista valitut poikkeamat"
 
 #: deviations/templates/deviations/_remove_modal.html
 msgid "SOME_DEVIATIONS_ARE_HIDDEN_WARNING"
@@ -4259,7 +4255,9 @@ msgstr "Tällä tehtävällä ei ole pohjatiedostoa."
 #: exercise/templates/exercise/_text_stats.html
 #, python-format
 msgid "SUBMITTER_COUNT -- %(number)s, %(percentage)s"
-msgstr "Palauttajia: %(number)s <small class=\"text-body-secondary\">%(percentage)s%%</small>"
+msgstr ""
+"Palauttajia: %(number)s <small class=\"text-body-"
+"secondary\">%(percentage)s%%</small>"
 
 #: exercise/templates/exercise/_user_last.html
 #, python-format
@@ -4292,6 +4290,21 @@ msgstr "Automaattinen vieritys"
 msgid "AUTO_SCROLL_BEHAVIOR_INSTANT"
 msgstr "Nopea vieritys"
 
+#: exercise/templates/exercise/_user_results.html templates/base.html
+msgid "HIDDEN_capitalized"
+msgstr "Piilotettu"
+
+#: exercise/templates/exercise/_user_results.html
+#: exercise/templates/exercise/_user_toc.html
+#: lti_tool/templates/lti_tool/lti_course.html
+msgid "REQUIRES"
+msgstr "Vaaditaan"
+
+#: exercise/templates/exercise/_user_results.html
+#: exercise/templates/exercise/_user_toc.html
+msgid "ASSIGNMENTS_WITH_PERSONAL_DEADLINE_DEVIATION"
+msgstr "Tehtäviä henkilökohtaisella määräaikapidennyksellä"
+
 #: exercise/templates/exercise/_user_results.html
 msgid "OPENS ON"
 msgstr "Avautuu"
@@ -4303,21 +4316,6 @@ msgstr "Tehtävät avautuvat"
 #: exercise/templates/exercise/_user_results.html
 msgid "OPEN_FOR_READING"
 msgstr "Lukumateriaali avoinna"
-
-#: exercise/templates/exercise/_user_results.html
-#: exercise/templates/exercise/_user_toc.html
-msgid "ASSIGNMENTS_WITH_PERSONAL_DEADLINE_DEVIATION"
-msgstr "Tehtäviä henkilökohtaisella määräaikapidennyksellä"
-
-#: exercise/templates/exercise/_user_results.html
-#: exercise/templates/exercise/_user_toc.html
-#: lti_tool/templates/lti_tool/lti_course.html
-msgid "REQUIRES"
-msgstr "Vaaditaan"
-
-#: exercise/templates/exercise/_user_results.html templates/base.html
-msgid "HIDDEN_capitalized"
-msgstr "Piilotettu"
 
 #: exercise/templates/exercise/_user_results.html
 #, python-format
@@ -4413,6 +4411,14 @@ msgstr ""
 "avustavan teknologian käyttäjille)"
 
 #: exercise/templates/exercise/exercise_plain.html
+msgid "SHOW_MODEL_ANSWER"
+msgstr "Näytä esimerkkiratkaisu"
+
+#: exercise/templates/exercise/exercise_plain.html
+msgid "SHOW_EXERCISE_TEMPLATE"
+msgstr "Näytä pohjatiedosto"
+
+#: exercise/templates/exercise/exercise_plain.html
 #, python-format
 msgid "PENALTY_AFTER -- %(penalty)s, %(deadline)s"
 msgstr "-%(penalty)s%% pistevähennys alkaen %(deadline)s"
@@ -4440,14 +4446,6 @@ msgstr "Palautetaan %(size)s hengen ryhmissä"
 #, python-format
 msgid "TO_BE_SUBMITTED_GROUPS -- %(min)s, %(max)s"
 msgstr "Palautetaan %(min)s-%(max)s hengen ryhmissä"
-
-#: exercise/templates/exercise/exercise_plain.html
-msgid "SHOW_MODEL_ANSWER"
-msgstr "Näytä esimerkkiratkaisu"
-
-#: exercise/templates/exercise/exercise_plain.html
-msgid "SHOW_EXERCISE_TEMPLATE"
-msgstr "Näytä pohjatiedosto"
 
 #: exercise/templates/exercise/exercise_plain.html
 #: exercise/templates/exercise/submission.html
@@ -5016,10 +5014,10 @@ msgstr ""
 #, python-brace-format
 msgid "PERSONAL_EXTENDED_DEADLINE_PLURAL -- {count}"
 msgstr ""
-"<span data-bs-toggle=\"tooltip\" title=\"Henkilökohtaiset pidennetyt määräajat: "
-"{count}\"><span class=\"bi-clock\" aria-hidden=\"true\"></"
-"span><span class=\"visually-hidden\">Henkilökohtaiset pidennetyt määräajat: {count}</"
-"span></span>"
+"<span data-bs-toggle=\"tooltip\" title=\"Henkilökohtaiset pidennetyt "
+"määräajat: {count}\"><span class=\"bi-clock\" aria-hidden=\"true\"></"
+"span><span class=\"visually-hidden\">Henkilökohtaiset pidennetyt määräajat: "
+"{count}</span></span>"
 
 #: exercise/templatetags/exercise.py
 msgid "LATEST_SUBMISSIONS"
@@ -5323,7 +5321,8 @@ msgstr "Nimi (muuten palvelun oletus)."
 #: external_services/models.py
 msgid "MENU_ITEM_MENU_ICON_CLASS_HELPTEXT"
 msgstr ""
-"Ikonin tyyli (muuten palvelun oletus), esim. star katso https://icons.getbootstrap.com/"
+"Ikonin tyyli (muuten palvelun oletus), esim. star katso https://icons."
+"getbootstrap.com/"
 
 #: external_services/models.py
 msgid "LABEL_MENU_WEIGHT"
@@ -5673,6 +5672,11 @@ msgstr "Lähetä sähköpostia kurssihenkilökunnalle"
 msgid "LABEL_PUBLISH"
 msgstr "julkaise"
 
+#: news/models.py news/templates/news/list.html
+#: userprofile/templates/userprofile/profile.html
+msgid "LANGUAGE"
+msgstr "Kieli"
+
 #: news/models.py
 msgid "LABEL_PIN"
 msgstr "kiinnitä listan kärkeen"
@@ -5864,8 +5868,8 @@ msgid "SELECT_COURSE"
 msgstr "Valitse kurssi"
 
 #: templates/base.html
-msgid "TOGGLE_NAVIGATION"
-msgstr "Näytä valikko"
+msgid "THEME"
+msgstr "Teema"
 
 #: templates/base.html
 msgid "CHANGE_LANGUAGE_TO_ENGLISH"
@@ -5888,16 +5892,8 @@ msgid "LOG_IN"
 msgstr "Kirjaudu sisään"
 
 #: templates/base.html
-msgid "NOTIFICATION"
-msgstr "Ilmoitus"
-
-#: templates/base.html
-msgid "SITE"
-msgstr "Sivusto"
-
-#: templates/base.html
-msgid "HOME"
-msgstr "Etusivu"
+msgid "TOGGLE_NAVIGATION"
+msgstr "Näytä valikko"
 
 #: templates/base.html userprofile/templates/userprofile/privacy.html
 msgid "PRIVACY_NOTICE"
